<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecitationPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gradient_background"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/previousSurahButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_previous"
            android:contentDescription="@string/previous_surah_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/textLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/surahNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/surah_name_placeholder" />

            <TextView
                android:id="@+id/englishSurahNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/english_surah_name_placeholder" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/nextSurahButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_next"
            android:contentDescription="@string/next_surah_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toEndOf="@id/textLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/recitationFragmentContainerView"
        android:name="com.example.qurannexus.fragments.ByAyatRecitationFragment"
        android:layout_width="403dp"
        android:layout_height="0dp"
        android:layout_marginTop="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        tools:layout="@layout/fragment_by_ayat_recitation">

    </FrameLayout>

    <ImageView
        android:id="@+id/bookmarkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookmark" />

    <ImageView
        android:id="@+id/recitationSideMenuButton"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_menu_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/recitation_side_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/light_green_side_nav"
        app:menu="@menu/side_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>