<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your details :"
            android:textSize="@dimen/text_size_salam"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/register_margin"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <ImageView
            android:id="@+id/registerBackButton"
            android:layout_width="@dimen/width_large"
            android:layout_height="@dimen/width_large"
            android:src="@drawable/ic_previous"
            android:layout_margin="@dimen/margin_xlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/registerNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin"
            android:background="@drawable/bg_edit_text"
            android:textSize="@dimen/text_size_medium"
            android:hint="Enter Name"
            android:drawableStart="@drawable/ic_username"
            android:padding="@dimen/padding_small"
            android:drawablePadding="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTV"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/registerEmailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_edit_text"
            android:hint="Enter Email"
            android:textSize="@dimen/text_size_medium"
            android:drawableStart="@drawable/ic_email"
            android:padding="@dimen/padding_small"
            android:drawablePadding="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerNameInput"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/registerPasswordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_edit_text"
            android:hint="Enter Password"
            android:textSize="@dimen/text_size_medium"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:drawableStart="@drawable/ic_password"
            android:padding="@dimen/padding_small"
            android:drawablePadding="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerEmailInput"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_xxxlarge"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_intermediate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerPasswordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_xxxlarge"
            android:layout_marginTop="@dimen/register_margin"
            android:textSize="@dimen/text_size_large"
            android:text="@string/register_button"
            android:backgroundTint="@color/surah_card_dark_green_300"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>