<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.onboard.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_card_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <ImageView
            android:id="@+id/mosqueImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_welcome_page_mosque"
            android:contentDescription="@string/content_desc_welcome_mosque_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="-15dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_card_top"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:id="@+id/salamTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="السَّلَامُ عَلَيْكُمْ "
                    android:textSize="@dimen/text_size_salam"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/welcomeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Welcome to Quran Nexus!"
                    android:textSize="@dimen/text_size_welcome"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/salamTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/textBottomBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="welcomeTextView" />


                <Button
                android:id="@+id/welcomePageLoginButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/login_button"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/welcomePageRegisterButton"
                app:layout_constraintTop_toBottomOf="@+id/textBottomBarrier"
                app:layout_constraintBottom_toBottomOf="parent" />

                <Button
                android:id="@+id/welcomePageRegisterButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/light_green_button"
                android:text="@string/register_button"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/welcomePageLoginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBottomBarrier"
                app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/skipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="@dimen/padding_medium"
            android:text="Skip"
            android:textSize="@dimen/text_size_skip" android:textStyle="bold"
            android:textColor="@color/white" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>